@@ -2,6 +2,17 @@ ccache news
 ===========
 
 
+Unreleased
+----------
+
+Bug fixes
+~~~~~~~~~
+
+- Made hash of cached result created with and without `CCACHE_CPP2` different.
+  This makes it possible to rebuild with `CCACHE_CPP2` set without having to
+  clear the cache to get new results.
+
+
 ccache 3.1.10
 -------------
 Release date: 2014-10-19
